chore: add build and application settings to clear tests logs